# cdviz

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.yaml  .mega-linter.yml  .mise.toml  .rtx.toml  .trivyignore  .yamllint.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSING.md  README.md  ROADMAP.md  justfile  renovate.json5  skaffold.yaml  taskfile.yaml
.github/: renovate.json5
.github/workflows/: ci.yml  mega-linter.yml  pages.yml  release.yml  renovate.yml  site.yml
.sqlx/: query-098856a9e50709b6723e01b83ac91b44dfcc1eccb9978b4a51e2c80764252c0e.json  query-17752ec6d8d06c32be0e722452a9390d13fe4488e4acc200a143122505ddefd9.json
cdviz-collector/: .clippy.toml  .dockerignore  .mise.toml  Cargo.toml  Dockerfile  cdviz-collector.toml  deny.toml  justfile  taskfile.yaml
cdviz-collector/.cargo/: config.toml
cdviz-collector/.sqlx/: query-4f5d9f4efa09b9bb83af1bd459d2c01e4a48916e71ccbae5881b1a13f324da2f.json  query-f9ad1896b6eb169b76af116f7bfd4f66233e9aac3a6143f43bef13b46249f969.json
cdviz-collector/examples/: vrl.rs
cdviz-collector/examples/assets/: cdviz-collector.toml
cdviz-collector/examples/assets/inputs/: cdevents.csv
cdviz-collector/examples/assets/opendal_fs/: cdevents.csv
cdviz-collector/examples/assets/outputs/transform-passthrough/: artifact_published.out.json  service_deployed.out.json
cdviz-collector/src/: config.rs  connect.rs  db.rs  errors.rs  main.rs  settings.rs  transform.rs  utils.rs
cdviz-collector/src/assets/: cdviz-collector.base.toml
cdviz-collector/src/middleware/: event_filter.rs
cdviz-collector/src/pipes/: collect_to_vec.rs  discard_all.rs  log.rs  mod.rs  passthrough.rs
cdviz-collector/src/sinks/: db.rs  debug.rs  folder.rs  http.rs  mod.rs
cdviz-collector/src/sources/: extractors.rs  hbs.rs  http.rs  mod.rs  noop.rs  opendal.rs  send_cdevents.rs  transformer.rs  transformers.rs
cdviz-collector/src/sources/opendal/: filter.rs  mod.rs  parsers.rs  texecutors.rs  transformers.rs
cdviz-collector/src/sources/transformers/: hbs.rs  mod.rs  vrl.rs
cdviz-collector/src/tools/: difference.rs  mod.rs  transform.rs  ui.rs
cdviz-db/: .mise.toml  Dockerfile  atlas.hcl  taskfile.yaml
cdviz-db/examples/: queries.sql
cdviz-db/migrations/: 20240316184734.sql  20240401171152.sql  20241014134101.sql  20241217160243.sql  atlas.sum
cdviz-db/src/: schema.sql
cdviz-grafana/dashboards/: cdevents-activity.json  wip.json
cdviz-grafana/datasources/: cdviz-db.yaml
cdviz-sensors/: Cargo.toml
cdviz-sensors/src/: errors.rs  http_sink.rs  main.rs  watch_directory.rs
cdviz-sensors/src/sources/: mod.rs  opendal_list.rs
cdviz-site/: .mise.toml  README.md  go.mod  go.sum  hugo.yaml  taskfile.yaml
cdviz-site/archetypes/: default.md
cdviz-site/landingpage/: .mise.toml  README.md  bun.lockb  index.html  main.js  package.json  style.css  tailwind.config.cjs  tailwind.config.js
cdviz-site/landingpage/public/: robots.txt
cdviz-svc/: Cargo.toml
cdviz-svc/src/: main.rs
cdviz-watcher/: Cargo.toml
cdviz-watcher/src/: settings.rs
charts/: .mise.toml  skaffold.yaml  taskfile.yaml
charts/cdviz/: Chart.yaml  values.yaml
charts/cdviz-collector/: Chart.yaml  values.yaml
charts/cdviz-collector/templates/: configmap.yaml  deployment.yaml  extra-resources.yaml  hpa.yaml  ingress.yaml  job-dbmigration.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
charts/cdviz-db/: Chart.yaml  values.yaml
charts/cdviz-db/templates/: extra-resources.yaml  job-dbmigration.yaml
charts/cdviz-grafana/: Chart.yaml  grafana-dashboards  values.yaml
charts/cdviz-grafana/templates/: grafana-dashboards.yaml  grafana-datasources.yaml
charts/cdviz/templates/: _helpers.tpl  grafana-dashboards.yaml  grafana-datasources.yaml  secrets.yaml
demos/: .mise.toml  demos.http  sample_cloud_event.json  taskfile.yaml
demos/example_01/: .gitignore  202401-dev-uat-prods.csv  202402-dev-uat-prod1.csv  202403-dev.csv  202404-dev-uat.csv  202405-dev-prod.csv  README.md  cdviz-collector.toml
demos/example_01/cdevents/: cdevents.csv
demos/stack-compose/: dashboards.yaml  docker-compose.yaml
demos/stack-k8s/: helmwave.yml
demos/stack-k8s/values/: cdviz-collector.yml  cdviz-db.yml  cdviz-grafana.yml  grafana.yml  kubewatch.yml  secret.yml
migrations/: 20240101182725_init.up.sql
