[workspace]
resolver = "2"
members = [
  "cdviz-collector",
  # "examples/*",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["David Bernard"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/davidB/cdviz"
rust-version = "1.75"
publish = false

[workspace.dependencies]
rstest = "0.18"
clap = { version = "4", features = ["derive", "env"] }
init-tracing-opentelemetry = { version = "0.17", features = [
  "otlp",
  "tracing_subscriber_ext",
  "logfmt",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = { version = "0.18" }

# [profile.dev.package.insta]
# opt-level = 3

# [profile.dev.package.similar]
# opt-level = 3

[workspace.metadata.release]
pre-release-commit-message = "🚀 (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "🔖 {{version}}"
