[package]
name = "cdviz-collector"
description = "The service to collect cdevents"
keywords = ["cd"]
categories = []
edition = "2021"
version = "0.1.0"
authors = ["David Bernard"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/davidB/cdviz"
rust-version = "1.80.1"
publish = false

[dependencies]
axum = { version = "0.7", optional = true }
axum-tracing-opentelemetry = { version = "0.19", optional = true }
bytes = { version = "1.6", optional = true }
cdevents-sdk = { git = "https://github.com/cdevents/sdk-rust" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
cloudevents-sdk = { version = "0.7", features = ["reqwest"] }
csv = { version = "1", optional = true }
enum_dispatch = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
globset = { version = "0.4", optional = true }
handlebars = { version = "6.0", optional = true }
handlebars_misc_helpers = { version = "0.16", optional = true }
humantime-serde = "1.1.1"
init-tracing-opentelemetry = { version = "0.19", features = [
  "otlp",
  "tracing_subscriber_ext",
  "logfmt",
] }
opendal = { version = "0.46", default-features = false, features = [
  "services-fs",
  "services-s3",
], optional = true }
reqwest = "0.11"
reqwest-middleware = "0.2"
reqwest-tracing = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.1"
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "time",
  "json",
], default-features = false, optional = true }
thiserror = "1"
time = "0.3"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = { version = "0.19" }

[dev-dependencies]
assert2 = "0.3"
# axum-test = "14"
cdevents-sdk = { git = "https://github.com/cdevents/sdk-rust", features = [
  "testkit",
] }
proptest = "1"
rstest = "0.22.0"
rustainers = "0.12"
tracing-subscriber = "0.3"

[features]
default = [
  "sink_db",
  "source_http",
  "source_opendal",
  "reqwest/rustls",
] #reqwest is also used as transitive dependencies
sink_db = ["dep:sqlx"]
source_http = ["dep:axum", "dep:axum-tracing-opentelemetry"]
source_opendal = [
  "dep:bytes",
  "dep:csv",
  "dep:globset",
  "dep:handlebars",
  "dep:handlebars_misc_helpers",
  "dep:opendal",
]

[package.metadata.release]
pre-release-commit-message = "🚀 (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "🔖 {{version}}"

[package.metadata.cargo-machete]
ignored = [
  "handlebars_misc_helpers",
  "humantime_serde",
] # auto-registered and used at runtime
