[package]
name = "cdviz-collector"
description = "The service to collect (pull/push) and to forward cdevents"
keywords = ["cd"]
categories = []
edition = "2021"
version = "0.1.0"
authors = ["David Bernard"]
license = "Apache-2.0"
repository = "https://github.com/davidB/cdviz"
rust-version = "1.80.0"
publish = false

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", optional = true }
axum-tracing-opentelemetry = { version = "0.21", optional = true }
bytes = { version = "1.7", optional = true }
# cdevents-sdk = { git = "https://github.com/cdevents/sdk-rust" }
cdevents-sdk = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = "2.2"
cloudevents-sdk = { version = "0.7", features = ["http-binding"] }
csv = { version = "1", optional = true }
enum_dispatch = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
globset = { version = "0.4", optional = true }
handlebars = { version = "6", optional = true }
handlebars_misc_helpers = { version = "0.17", optional = true, default-features = false, features = [
  "string",
  "json",
  "regex",
  "uuid",
] }
humantime-serde = "1.1"
init-tracing-opentelemetry = { version = "0.22", features = [
  "otlp",
  "tracing_subscriber_ext",
  "logfmt",
] }
opendal = { version = "0.50", default-features = false, features = [
  "services-fs",
  "services-s3",
], optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }
reqwest-middleware = { version = "0.3", features = ["json"], optional = true }
reqwest-tracing = { version = "0.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "time",
  "json",
], default-features = false, optional = true }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = { version = "0.21" }

[dev-dependencies]
assert2 = "0.3"
# axum-test = "14"
cdevents-sdk = { version = "0.1", features = ["testkit"] }
figment = { version = "0.10", features = ["toml", "env", "test"] }
proptest = "1"
rstest = "0.23"
rustainers = "0.12"
tempfile = "3"
test-strategy = "0.4"
tracing-subscriber = "0.3"
uuid = "1.10"

[features]
# default is "full" feature set
default = [
  "sink_db",
  "sink_folder",
  "sink_http",
  "source_http",
  "source_opendal",
]
sink_db = ["dep:sqlx"]
sink_folder = ["dep:opendal"]
sink_http = [
  "dep:reqwest",
  "dep:reqwest-middleware",
  "dep:reqwest-tracing",
  #reqwest is also used as transitive dependencies
  "reqwest/charset",
  "reqwest/http2",
  "reqwest/json",
  "reqwest/rustls-tls",
]
source_http = ["dep:axum", "dep:axum-tracing-opentelemetry"]
source_opendal = [
  "dep:bytes",
  "dep:csv",
  "dep:globset",
  "dep:handlebars",
  "dep:handlebars_misc_helpers",
  "dep:opendal",
]

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"

[package.metadata.release]
pre-release-commit-message = "🚀 (cargo-release) version {{version}}"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "🔖 {{version}}"

[package.metadata.cargo-machete]
ignored = [
  "handlebars_misc_helpers",
  "humantime_serde",
] # auto-registered and used at runtime
