[package]
name = "cdviz-sensors"
description = "Watch resources and push cdevents"
keywords = ["cd"]
categories = []
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true }
cdevents-sdk = { git = "https://github.com/cdevents/sdk-rust" }
chrono = "0.4"
enum_dispatch = "0.3"
init-tracing-opentelemetry = { workspace = true }
futures = "0.3"
opendal = "0.45"
reqwest = "0.11"
reqwest-middleware = "0.2"
reqwest-tracing = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# [dev-dependencies]
# rstest = { workspace = true }
# tracing-subscriber = "0.3"
